tests/negative/regression/r39.orng
fn main() -> Int { 
    const a: Int = match { } { 4 => 5 }
    a
} 
